syntax = "proto3";

package vesseloracle.vesseloracle;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "vesseloracle/vesseloracle/params.proto";
import "vesseloracle/vesseloracle/vessel.proto";
import "vesseloracle/vesseloracle/consolidated_data_report.proto";

option go_package = "vesseloracle/x/vesseloracle/types";

// GenesisState defines the vesseloracle module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params                 params                     = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated Vessel                 vesselList                 = 2 [(gogoproto.nullable) = false] ;
  repeated ConsolidatedDataReport consolidatedDataReportList = 3 [(gogoproto.nullable) = false] ;
}

